fix: fixed scrollbar issue with sticky navabr

--- a/Styles/Site.css
+++ b/Styles/Site.css
@@ -20,6 +20,13 @@ body {
     background-color: white;
     color: black;
 }
+.navbar-collapse ::-webkit-scrollbar {
+    display: none;
+}
+.navbar-collapse ::-webkit-scrollbar-thumb {
+    background: #23272B !important;
+    border-radius: 5px !important;
+}
 nav {
     /*Make tha navbar be on top of the contents*/
     z-index: 100000 !important;
